Deployments/wordpress-hieu/010-Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hieu-wordpress
  labels:
    cert-manager-tls: nekomade-com
