Deployments/wordpress-hieu/040-Deployment.yaml
# Database - MYSQL
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-mysql
  namespace: hieu-wordpress
  labels:
    app: wordpress
    tier: mysql
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - image: mysql:latest
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-data
              subPath: database
              mountPath: /var/www/html
      volumes:
      - name: mysql-data
        persistentVolumeClaim:
          claimName: wp-volume-claim
# Web app - Wordpress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: hieu-wordpress
  labels:
    app: wordpress
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - image: library/wordpress:5.6.1-apache
          name: wordpress
          ports:
            - containerPort: 80
              name: wordpress
          volumeMounts:
            - name: wp-data
              subPath: wordpress
              mountPath: /var/www/html
      volumes:
        - name: wp-data
          persistentVolumeClaim:
            claimName: wp-volume-claim
