Deployments/wordpress-hieu/060-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: hieu-wordpress
  annotations:
    cert-manager.io/issuer: prod-issuer
    cert-manager.io/issuer-kind: OriginIssuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
    external-dns.beta.kubernetes.io/hostname: wp.nekomade.com
    external-dns.beta.kubernetes.io/ttl: "120" #optional
spec:
  tls:
    # specifying a host in the TLS section will tell cert-manager what
    # DNS SANs should be on the created certificate.
    - hosts:
        - wp.nekomade.com
      # cert-manager will create this secret (Referenced from the cert that was previously created)
      secretName: nekomade-tls
  rules:
    - host: wp.nekomade.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress-service
                port:
                  number: 80
